# wsos_FinalApp

./: Anchor.toml  package-lock.json  package.json  tsconfig.json
.next/: trace
.next/cache/webpack/client-development/: 1.pack  index.pack  index.pack.old
.next/cache/webpack/server-development/: 0.pack  1.pack  index.pack  index.pack.old
.next/server/pages/: index.js
.next/static/chunks/: _error.js  webpack.js
.next/static/chunks/pages/: index.js
.next/static/webpack/: webpack.7ccf9ddd81eafdc3.hot-update.js  webpack.cda682802536362c.hot-update.js
pages/: index.js
programs/wsos-FacebookClone/: Cargo.toml
programs/wsos-FacebookClone/src/: lib.rs
programs/wsos-dao-voting-app/: Cargo.toml
programs/wsos-dao-voting-app/src/: lib.rs
tests/: wsos-dao-voting-app.ts
